k8s/files-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: files-svc
  labels:
    app: spring
spec:
  selector:
    app: files-svc
  ports:
  - name: web
    protocol: TCP
    port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: files-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: files-svc
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      creationTimestamp: null
      labels:
        app: files-svc
    spec:
      containers:
      - env:
        - name: AZURE_BLOB_CONN_STRING
          valueFrom:
            secretKeyRef:
              key: conn.string
              name: azure-blob
        - name: AZURE_CS_PICTURE_ANALYSIS_KEY
          valueFrom:
            secretKeyRef:
              key: subscriptionKey
              name: azure-cognitive-pic
        - name: AZURE_CS_PICTURE_ANALYSIS_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: endpoint
              name: azure-cognitive-pic
        - name: AZURE_CS_TEXT_ANALYSIS_KEY
          valueFrom:
            secretKeyRef:
              key: key
              name: azure-cognitive-text
        - name: AZURE_CS_TEXT_ANALYSIS_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: endpoint
              name: azure-cognitive-text
        image: docker-hub.informatik.haw-hamburg.de/wp-cc-clouddrop/files-service:latest
        imagePullPolicy: Always
        name: files-svc
        ports:
        - containerPort: 8080
        resources: {}
      imagePullSecrets:
      - name: haw-registry
status: {}
---
