k8s/users-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: users-svc
spec:
  selector:
    app: users-svc
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-svc
spec:
  selector:
    matchLabels:
      app: users-svc
  replicas: 3
  template:
    metadata:
      labels:
        app: users-svc
    spec:
      containers:
        - name: users-svc
          image: docker-hub.informatik.haw-hamburg.de/wp-cc-clouddrop/users:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: azure-cosmosdb-config
            mountpath: "/app/config"
            readOnly: true
      volumes:
      - name: azure-cosmosdb-config
        secret:
          secretName: azure-cosmosdb
      imagePullSecrets:
      - name: regcred
