k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: clouddrop.xyz
    http:
      paths:
      - path: /files
        backend:
          serviceName: files-svc
          servicePort: 8080
      - path: /user
        backend:
          serviceName: users-svc
          servicePort: 8080
